Use tritonBLAS Device Side APIs in iris ops (#358)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Muhammad Awad <112003944+mawad-amd@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "numpy",
     "requests",
     "ruff",
+    "tritonblas @ git+https://github.com/ROCm/tritonBLAS.git@df58476a4520b72495a3f03f911368a184126568",
+
 ]
 
 [project.urls]
